feat: tailwind installed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -386,6 +386,9 @@
 
   </div>
 
+Unknown at rule @tailwindscss(unknownAtRules)
+
+
   <!-- Next Steps -->
   <h2>Next Steps</h2>
   <p>What do you want to do next with your app?</p>
