--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,38 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$note-web-primary: mat.define-palette(mat.$blue-palette, A400);
+$note-web-accent: mat.define-palette(mat.$indigo-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$note-web-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$note-web-theme: mat.define-light-theme((
+  color: (
+    primary: $note-web-primary,
+    accent: $note-web-accent,
+    warn: $note-web-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($note-web-theme);
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -12,4 +47,27 @@ body{
     --tw-text-opacity: 1;
     color: rgb(86 92 98 / var(--tw-text-opacity));
     line-height: 1.4;
+}
+html, body { height: 100%; }
+body { margin: 0; }
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
