--- a/src/data/note/note/list/list.component.html
+++ b/src/data/note/note/list/list.component.html
@@ -21,17 +21,20 @@
 
     </div>
 
-    <ng-container *ngFor="let note of notes">
+    <ng-container *ngFor="let groupOfNotes of groupOfNotes">
         <div class="flex items-center justify-between p-2 text-sm text-default-300 font-semibold border-default-200 border-b">
-            {{ note.formattedDate }}
+            {{ groupOfNotes.title }}
         </div>
-        <div class="bg-default-50 px-4 py-2 rounded-sm">
-           <div class="flex items-center justify-between">
-                <div class="text-default-300 font-medium"> {{ note.title }} </div>
-                <div class="text-xs text-gray-400"> {{ note.updatedAt | date: 'dd/MM/yyyy HH:mm' }} </div>
-           </div>
-            <div class="mt-2 line-clamp-3">
-                {{ note.content }}
+        <div *ngFor="let note of groupOfNotes.notes"
+            class="border-default-200 border-b">
+            <div class="bg-default-50 px-4 py-2 rounded-sm">
+            <div class="flex items-center justify-between">
+                    <div class="text-default-300 font-medium"> {{ note.title }} </div>
+                    <div class="text-xs text-gray-400"> {{ note.updatedAt | date: 'dd/MM/yyyy HH:mm' }} </div>
+            </div>
+                <div class="mt-2 line-clamp-3">
+                    {{ note.content }}
+                </div>
             </div>
         </div>
     </ng-container>
