--- a/src/data/note/note/note.component.html
+++ b/src/data/note/note/note.component.html
@@ -1,3 +1,6 @@
-<div class="flex-1 h-full overflow-hidden">
+<div class="flex flex-1 h-full overflow-hidden">
     <note-list></note-list>
+    <div *ngIf="isInEditionMode">
+        <note-edit></note-edit>
+    </div>
 </div>
