feat: add edition in content note

--- a/src/data/note/note/edit/edit.component.html
+++ b/src/data/note/note/edit/edit.component.html
@@ -1,1 +1,6 @@
-<p>edit works!</p>
+<div class="p-2 h-full">
+    <div class="NgxEditor__Wrapper">
+        <ngx-editor-menu [editor]="_editor" [toolbar]="toolbar"></ngx-editor-menu>
+        <ngx-editor [editor]="_editor" [(ngModel)]="html" (ngModelChange)="contentChange($event)" [placeholder]="'Escreva sua anotação...'"></ngx-editor>
+    </div>
+</div>
