--- a/src/data/note/note/list/list.component.html
+++ b/src/data/note/note/list/list.component.html
@@ -5,7 +5,7 @@
                 <div class="bg-default-200 h-7 w-7 rounded-full flex-center"> V </div>
                 <div class="text-left line-clamp-1"> Vitor Hugo Souto Oliveira </div>
             </div>
-            <mat-icon fontIcon="home"></mat-icon>
+            <mat-icon fontIcon="settings"></mat-icon>
         </div>
     
         <div class="flex-center w-full py-2 bg-default-100 border-default-200">
