--- a/src/data/note/note/note.component.html
+++ b/src/data/note/note/note.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-1 h-full overflow-hidden">
     <note-list></note-list>
-    <div *ngIf="isInEditionMode">
+    <div *ngIf="isInEditionMode" class="w-full">
         <note-edit></note-edit>
     </div>
 </div>
