feat: login page creation started

--- a/src/data/note/note/edit/edit.component.html
+++ b/src/data/note/note/edit/edit.component.html
@@ -1,4 +1,4 @@
-<div class="p-2 h-full bg-default-50">
+<div class="p-2 pr-0 h-full bg-default-50">
     <div class="NgxEditor__Wrapper">
         <ngx-editor-menu [editor]="_editor" [toolbar]="_toolbar"></ngx-editor-menu>
         <ngx-editor [editor]="_editor" [(ngModel)]="html" (ngModelChange)="contentChange($event)" [placeholder]="'Escreva sua anotação...'"></ngx-editor>
