--- a/src/data/shared/h-button/h-button.component.html
+++ b/src/data/shared/h-button/h-button.component.html
@@ -1,7 +1,7 @@
 <button
   mat-flat-button
   color="primary"
-  [class]="buttonClass"
+  [class]="'h-button px-8 py-2 bg-indigo-500 text-white ' + buttonClass"
   (click)="onClickEvent()" >
     {{ text }}
 </button>
